--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@number-flow/react": "^0.5.7",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/css": "^0.4.0"
   }
 }
