--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
-REACT_APP_BASE_URL=http://localhost
-REACT_APP_PORT=3030
+REACT_APP_BASE_URL=https://fb-clone-app.onrender.com
+REACT_APP_PORT=  # No need to specify a port since it's handled by Render
+REACT_APP_CLOUD_NAME=dm4vi26ml
+REACT_APP_IMG_UPLOAD_PRESET=my_unsigned_preset
