--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 3030"
+    "server": "json-server --watch db.json --port 3030",
+    "dev": "cross-env NODE_ENV=development react-scripts start",
+    "prod": "cross-env NODE_ENV=production react-scripts start"
   },
   "eslintConfig": {
     "extends": [
